quick fix: search bar magnifier glass always visible

--- a/static/css/base_nav.css
+++ b/static/css/base_nav.css
@@ -282,5 +282,7 @@ body{
   width: 80% !important;
 }
 
-
+.display-block{
+  display: block !important;
+}
   
